--- a/demo/LayoutDemo.scss
+++ b/demo/LayoutDemo.scss
@@ -1,9 +1,26 @@
 @import "../node_modules/tinper-bee-core/scss/index.scss";
 @import "../src/Layout.scss";
+@import "../node_modules/bee-button/src/Button.scss";
+@import "../node_modules/bee-panel/src/Panel.scss";
 
-.gray {
-    background: #f5f5f5;
-    height: 50px;
+.grayDeep {
+    background: unquote("rgb(#{$palette-grey-600})");
+    height: 30px;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+.gray {
+    background: unquote("rgb(#{$palette-grey-400})");
+    height: 30px;
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+.grayLight{
+    background: unquote("rgb(#{$palette-grey-200})");
+    height: 30px;
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
