--- a/demo/LayoutDemo.scss
+++ b/demo/LayoutDemo.scss
@@ -2,5 +2,5 @@
 @import "../src/Layout.scss";
 @import "../node_modules/bee-button/src/Button.scss";
 @import "../node_modules/bee-panel/src/Panel.scss";
-
+@import "../node_modules/bee-message/build/Message.css";
 
